# INTERCEPT

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: main.py  requirements.txt  schemas.py  services.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/sandbox/: page.tsx
apps/web/src/components/: graph-viewer.tsx  nav.tsx
apps/web/src/components/charts/: bar-chart-card.tsx  infection-chart.tsx  leaderboard-table.tsx  wins-summary.tsx
apps/web/src/components/ui/: badge.tsx  card.tsx
apps/web/src/data/: all_results.json  comparison_results.json  email_eu_results.json
apps/web/src/lib/: api-client.ts  static-data.ts
checkpoints/: .gitkeep
data/snap/: .gitkeep
docs/: DECISIONS.md  DEMO_SCRIPT.md  PRESENTER_SCRIPT.md
results/intercept_grpo_20251202_170938/: train_config.json
results/intercept_grpo_20251202_171345/: train_config.json
results/intercept_grpo_20251203_131932/: train_config.json
results/intercept_grpo_20251203_135046/: train_config.json
results/intercept_grpo_ba80_20251203_135512/: train_config.json
results/intercept_grpo_fixed_20251203_133857/: train_config.json
scripts/: demo.sh
src/: __init__.py  analyze_training.py  baseline_strategies.py  environment.py  evaluate_email_eu.py  evaluate_intercept.py  intercept_baselines.py  intercept_env.py  intercept_grpo.py  network_datasets.py  plot_training.py  run_multi_network_experiments.py  tc_wrapper.py  teammate_env.py  temporal_analysis.py  train_intercept.py  visualize_cascades.py
tests/: __init__.py  test_environment.py
